# wgpu-native-dist

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/wgpu-native/: webgpu.hpp
lib/win32-x64/shared/release/: libwgpu_native.dll.lib  libwgpu_native.lib  wgpu_native.dll.exp  wgpu_native.dll.lib  wgpu_native.lib
